--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+MAXIMUM_AMOUNT_OF_STOPS=5
+DEFAULT_EXTRA_PERSON_PRICE=15
